--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,5 @@
 .navbar {
+    font-family: 'Varela Round', sans-serif;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -6,7 +7,6 @@
     color: white;
     height: 175px;
     border-bottom: 0.5px solid white;
-    font-family: 'Alegreya', serif;
 }
 
 .col-2 {
@@ -16,17 +16,34 @@
     justify-content: flex-end;
 }
 
+.kck-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 150px;
+    height: 150px;
+}
+
 .login-btn {
+    color: #2BA84A;
     width: 6rem;
     height: 3rem;
     /* border: none; */
+    border: 2px solid #2BA84A;
     border-radius: 4px;
     font-size: 1rem;
     font-weight: bold;
     text-align: center;
     /* align-self: center; */
+    transition: 0.5s;
+    background-color: #d6f5de;
 }
 
-.login-btn:hover {
+.login-btn:hover,
+.login-btn:focus {
     cursor: pointer;
+    color: white;
+    /* box-shadow: inset 12em 0 0 0 #00aaff; */
+
+    box-shadow: inset 12em 0 0 0 #2BA84A;
 }
