--- a/src/components/content/info/info.css
+++ b/src/components/content/info/info.css
@@ -12,9 +12,10 @@
 .info .stripe {
     color: white;
     text-shadow: 3px 3px #040F0F;
-    border-bottom: 1.5px solid #040F0F;
+    border-bottom: 0.1em solid #2BA84A;
     /* border-top: 1.5px solid #040F0F; */
-    background-color: #4f6464;
+    /* background-color: #4f6464; */
+    background-color: #2d3a3a;
     font-size: 2em;
     /* Option 1 */
     /* background-color: #648282; */
@@ -30,15 +31,15 @@
     margin: 0;
     padding: 1rem;
     /* color: #2BA84A; */
-    color: black;
+    color: white;
     /* color: white; */
-    text-shadow: 2px 2px #2BA84A;
+    text-shadow: 2px 2px #2d3a3a;
     font-size: 2.5em;
 }
 
 .info .quote:nth-child(2){
-    color: black;
-    text-shadow: 2px 2px #2BA84A;
+    color: white;
+    text-shadow: 2px 2px #2d3a3a;
     padding-bottom: 4rem;
 }
 
@@ -53,12 +54,22 @@
     /* Option 2 */
     /* background-color: #648282; */
     color: white;
-    text-shadow: 1px 1px #283333;
+    /* text-shadow: 1px 1px #283333; */
 }
 
 .info .stripe-green p {
+    padding: 1rem;
+    border-radius: 1em;
     width: 40vw;
     font-family: 'PT Sans', sans-serif;
-    font-size: 1.2em;
+    font-size: 1.25em;
     line-height: 1.5;
+    /* background-color: rgba(0, 106, 5, 0.55); */
+    background-color: rgba(0, 30, 30, 0.6);
+    box-shadow: 0px 0px 2em #2BA84A;
+}
+
+.info .stripe-green p a {
+    text-decoration: none;
+    color: #00ff40;
 }
