--- a/src/components/content/coaches/coaches.css
+++ b/src/components/content/coaches/coaches.css
@@ -6,7 +6,7 @@
     width: 100%;
     /* background-color: #c1f0cd; */
     padding-bottom: 10rem;
-    padding-top: 5rem;
+    /* padding-top: 5rem; */
     /* padding: 10rem; */
 }
 
