--- a/src/components/content/logo/logo.css
+++ b/src/components/content/logo/logo.css
@@ -1,12 +1,10 @@
-.logo{
-    width: 100%;
-    height: 45vh;
-    /* background-color: #c1f0cd; */
-}
-
-.logo img{
-    position: absolute;
-    top: 0;
-    left: 50%;
-    margin-left: -20%;
-}
+@media screen and (max-width: 480px) {
+    .logo {
+        display: flex;
+        justify-content: center;
+    }
+    .logo img {
+        width: 90%;
+        height: 90%; 
+    }
+  }
