Home Page Wireframe COMPLETE

--- a/src/components/content/coaches/coaches.css
+++ b/src/components/content/coaches/coaches.css
@@ -28,6 +28,6 @@
 }
 
 .coach img {
-    box-shadow: 25px 50px 50px #2d3a3a;
+    box-shadow: 1em 1em 2.5em #2d3a3a;
     border-radius: 0 0 1em 1em;
 }
