--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,3 +1,8 @@
+.about {
+    background: rgb(214,245,220);
+    background: radial-gradient(circle, rgba(214,245,220,1) 0%, rgba(184,199,199,1) 50%, rgba(79,100,100,1) 100%);
+}
+
 .about .banner {
     width: 100%;
 }
@@ -11,8 +16,8 @@
     display: flex;
     justify-content: center;
     opacity: 0.5;
-    background: rgb(214,245,220);
-    background: radial-gradient(circle, rgba(214,245,220,1) 0%, rgba(184,199,199,1) 50%, rgba(79,100,100,1) 100%);
+    /* background: rgb(214,245,220); */
+    /* background: radial-gradient(circle, rgba(214,245,220,1) 0%, rgba(184,199,199,1) 50%, rgba(79,100,100,1) 100%); */
 }
 
 .about-content {
