--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,6 +1,8 @@
 .contact {
     display: flex;
     flex-direction: column;
+    background: rgb(214,245,220);
+    background: radial-gradient(circle, rgba(214,245,220,1) 0%, rgba(184,199,199,1) 50%, rgba(79,100,100,1) 100%);
 }
 
 .contact .sec-1 {
