--- a/src/components/content/info/info.css
+++ b/src/components/content/info/info.css
@@ -54,7 +54,7 @@
     /* Option 2 */
     /* background-color: #648282; */
     color: white;
-    /* text-shadow: 1px 1px #283333; */
+    text-shadow: 1px 1px #283333;
 }
 
 .info .stripe-green p {
@@ -65,7 +65,8 @@
     font-size: 1.25em;
     line-height: 1.5;
     /* background-color: rgba(0, 106, 5, 0.55); */
-    background-color: rgba(0, 30, 30, 0.6);
+    /* background-color: rgba(0, 30, 30, 0.6); */
+    background-color: #597373;
     box-shadow: 0px 0px 2em #2BA84A;
 }
 
