--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -31,8 +31,8 @@
 }
 
 .testimonial .before-after div {
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex; */
+    /* flex-wrap: wrap; */
     margin: 0.5em;
     width: 20em;
     border: 1px solid red;
@@ -45,4 +45,20 @@
 
 .testimonial .client-name {
     text-align: center;
+}
+
+@media screen and (max-width: 650px) {
+    .testimonial {
+        width: 95%;
+        padding: 2em;
+    }
+    .testimonial .before-after {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+    }
+    .testimonial .before-after div {
+        height: 15em;
+    }
 }
