--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -32,6 +32,33 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+    /* border: 1px solid black; */
+    margin-left: 5em;
+    margin-right: 5em;
+}
+
+.about-content .sec-2 {
+    padding: 1em;
+    display: flex;
+    flex-direction: row;
+    /* border: 1px solid black; */
+    justify-content: space-evenly;
+    margin-top: 2.5em;
+}
+
+/* .sec-2 .layer .im {
+    width: 30em;
+} */
+
+.sec-2 .layer .text {
+    width: 30em;
+}
+
+.sec-2 .layer {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .about-content .sec-1 div {
@@ -39,14 +66,15 @@
 }
 
 .about-content .im {
-    width: 25em;
+    width: 30em;
     height: 25em;
     border: 1px solid black;
 }
 
 .about-content .text {
-    width: 35vw;
-    padding: 2.5em;
+    /* width: 35vw; */
+    width: 30vw;
+    padding: 2em;
 }
 
 @media screen and (max-width: 480px) {
