--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -60,4 +60,13 @@
     .f-section {
         width: 90vw; 
     }
+    .footer {
+        padding: 1em;
+    }
   }
+
+@media screen and (min-width: 751px) and (max-width: 1000px) {
+    .f-section {
+        width: 70vw; 
+    }
+}
