--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,28 +1,18 @@
 .navbar {
+    height: 9em;
     font-family: 'Varela Round', sans-serif;
     display: flex;
-    justify-content: center;
+    align-items: center;
     width: 100%;
     background-color: #2d3a3a;
     color: white;
-    /* height: 175px; */
-    height: 11.25em;
     border-bottom: 0.5px solid white;
 }
 
-.col-2 {
-    display: flex;
-    width: 25%;
-    align-items: center;
-    justify-content: flex-end;
-}
-
 .kck-logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 150px;
-    height: 150px;
+    padding-left: 1em;
+    width: 75px;
+    height: 85px;
 }
 
 .login-btn {
@@ -47,4 +37,12 @@
     /* box-shadow: inset 12em 0 0 0 #00aaff; */
 
     box-shadow: inset 12em 0 0 0 #2BA84A;
+}
+
+@media screen and (max-width: 875px) {
+    .login-btn {
+        position: absolute;
+        top: 4.25em;
+        right: 1em;
+    }
 }
