--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,30 @@
 .App {
-  /* text-align: center; */
   height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: rgb(214,245,220);
+  background: radial-gradient(circle, rgba(214,245,220,1) 0%, rgba(184,199,199,1) 50%, rgba(79,100,100,1) 100%);
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  padding: 2em 0;
 }
 
-.App-link {
-  color: #61dafb;
+.wrapper form {
+  background-color: white;
+  border-radius: 0.3em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.wrapper form h3 {
+  text-align: center;
+  padding: 1em 0;
+}
+
+@media screen and (max-width: 550px) {
+  .logo img {
+    height: 375px; 
+    width: 375px;
   }
 }
