--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,85 +1,17 @@
-.about {
-    background: rgb(214,245,220);
-    background: radial-gradient(circle, rgba(214,245,220,1) 0%, rgba(184,199,199,1) 50%, rgba(79,100,100,1) 100%);
-}
-
-.about .banner {
-    width: 100%;
-}
-
-.about .banner img {
-    width: 100%;
-    height: 500px;
-}
-
-.logo-about {
+.about .section:first-child {
     display: flex;
-    justify-content: center;
-    opacity: 0.5;
-    /* background: rgb(214,245,220); */
-    /* background: radial-gradient(circle, rgba(214,245,220,1) 0%, rgba(184,199,199,1) 50%, rgba(79,100,100,1) 100%); */
-}
-
-.about-content {
-    display: flex;
-    flex-direction: column;
-    padding: 2.5em;
-}
-
-.about-content .sec-1 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    width: 90vw;
     justify-content: space-evenly;
-    align-items: center;
-    /* border: 1px solid black; */
-    margin-left: 5em;
-    margin-right: 5em;
+    margin-bottom: 4em;
 }
 
-.about-content .sec-2 {
-    padding: 1em;
-    display: flex;
-    flex-direction: row;
-    /* border: 1px solid black; */
-    justify-content: space-evenly;
-    margin-top: 2.5em;
+.section {
+    text-align: center;
+    margin: 2em 0;
 }
 
-/* .sec-2 .layer .im {
-    width: 30em;
-} */
-
-.sec-2 .layer .text {
-    width: 30em;
-}
-
-.sec-2 .layer {
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.about-content .sec-1 div {
-    margin: 1em;
-}
-
-.about-content .im {
-    width: 30em;
-    height: 25em;
-    border: 1px solid black;
-}
-
-.about-content .text {
-    /* width: 35vw; */
-    width: 30vw;
-    padding: 2em;
-}
-
-@media screen and (max-width: 480px) {
-    .logo-about img {
-        width: 90%;
-        height: 90%; 
+@media screen and (max-width: 600px) {
+    .about-img{
+        max-width: 100%;
     }
-  }
+}
