--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -1,10 +1,11 @@
 .testimonials {
     display: flex;
-    padding: 2.5em;
+    padding: 2.5em 0;
     justify-content: space-evenly;
     flex-wrap: wrap;
     background: rgb(214,245,220);
     background: radial-gradient(circle, rgba(214,245,220,1) 0%, rgba(184,199,199,1) 50%, rgba(79,100,100,1) 100%);
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
 }
 
 .testimonial {
@@ -12,8 +13,8 @@
     padding: 1em;
     display: flex;
     flex-direction: column;
-    width: 33em;
-    /* height: 20em; */
+    width: 75vw;
+    border-radius: 0.3em;
     margin: 1em;
     border: 1px solid black;
 }
@@ -23,42 +24,68 @@
     text-align: center;
 }
 
-.testimonial .before-after {
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    height: 15em; /* This will need to be changed  */
-}
-
-.testimonial .before-after div {
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    margin: 0.5em;
-    width: 20em;
-    border: 1px solid red;
-}
-
 .testimonial .review {
-    text-align: left;
+    text-align: center;
     padding: 1.5em;
+    font-size: 1.1em;
 }
 
 .testimonial .client-name {
     text-align: center;
 }
 
+.testimonial img {
+    max-width: 475px;
+    max-height: 475px; 
+}
+
+.before-after {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.before, .after {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 @media screen and (max-width: 650px) {
     .testimonial {
-        width: 95%;
-        padding: 2em;
+        width: 90%;
+        margin: 1em 0;
+        padding: 0.5em;
+        /* width: 95vw; */
+        /* width: 95%; */
+        /* padding: 2em; */
     }
-    .testimonial .before-after {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: auto;
+    .testimonial img {
+        max-width: none;
+        max-height: none;
+        width: 100%;
+        height: 100%; 
     }
-    .testimonial .before-after div {
-        height: 15em;
+}
+
+@media screen and (max-width: 860px) {
+    .testimonial img {
+        max-width: 80%;
+        max-height: 90%; 
+    }
+}
+
+@media screen and (min-width: 1615px) {
+    .testimonial {
+        width: 50vw;
+    }
+    .testimonial img {
+        max-width: 600px;
+        max-height: 600px; 
+    }
+}
+
+@media screen and (min-width: 1300px) {
+    .testimonial {
+        width: 60vw;
     }
 }
